--- a/LivmoreBot-StandAlone.ipynb
+++ b/LivmoreBot-StandAlone.ipynb
@@ -74,7 +74,7 @@
     "        self.main_menu_func = main_menu_func\n",
     "        \n",
     "        # Initialize the Google Maps client\n",
-    "        self.gmaps = googlemaps.Client(key='AIzaSyBkjc7v_3RATP3W7ABPJ8ieF8XWQDqNTLA')\n",
+    "        self.gmaps = googlemaps.Client(key='API KEY HERE')\n",
     "        \n",
     "        # Convert apartment's address to latitude and longitude\n",
     "        geocode_result = self.gmaps.geocode('1180 Rue de Bleury, Montréal, QC H3B 0H2')\n",
